--- a/MultiLedController/MyForm/MainForm3.resx
+++ b/MultiLedController/MyForm/MainForm3.resx
@@ -123,4 +123,7 @@
   <metadata name="myToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>131, 18</value>
   </metadata>
+  <metadata name="recordFolderBrowserDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>249, 14</value>
+  </metadata>
 </root>
