--- a/LightController/MyForm/NewMainForm.resx
+++ b/LightController/MyForm/NewMainForm.resx
@@ -129,6 +129,9 @@
   <metadata name="myStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>320, 13</value>
   </metadata>
+  <metadata name="myStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>320, 13</value>
+  </metadata>
   <metadata name="lightImageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>450, 12</value>
   </metadata>
@@ -137,7 +140,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACg
-        VgYAAk1TRnQBSQFMAgEBKgEAAUgBBQFIAQUBPAEAAUEBAAT/AREBAAj/AUIBTQE2BwABNgMAASgDAAHw
+        VgYAAk1TRnQBSQFMAgEBKgEAAVABBQFQAQUBPAEAAUEBAAT/AREBAAj/AUIBTQE2BwABNgMAASgDAAHw
         AwABywECAgABAQEAARAFAAGgATwBBYkAAf8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/
         Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/
         Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/
@@ -7071,7 +7074,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADs
-        qhAAAk1TRnQBSQFMAgEBKQEAAXABDQFwAQ0BZAEAAW4BAAT/AREBAAj/AUIBTQE2BwABNgMAASgDAAGQ
+        qhAAAk1TRnQBSQFMAgEBKQEAAXgBDQF4AQ0BZAEAAW4BAAT/AREBAAj/AUIBTQE2BwABNgMAASgDAAGQ
         AQECAAG6AQQCAAEBAQABEAUAAUABxQEO/wD/AP8A/wD/AP8A/wD/AP8A1AAB/wF/Ad4BewHeAXsB3gF7
         Ad4BewHeAXsB3gF7Ad4BewH/AX//AP8A/AAB/wF/Af8BfwG9AXcBewFvARgBYwHXAVoBtgFWAVMBSgEQ
         AUIBMQFGAa4BOQFsATEBjAExAY0BNQGNATUBjQE1AY0BNQGNATUBEAFCAVIBSgFSAUoBlAFSAZQBUgEY
